--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,12 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  choco_lints:
+    git:
+      ref: 1.1.0
+      url: git@github.com:charlescyt/choco_lints.git
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
