--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
+  re_editor: ^0.3.0
+  re_highlight: ^0.0.3
 
 dev_dependencies:
   choco_lints:
