--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,19 +7,29 @@ environment:
   sdk: ">=3.4.1 <4.0.0"
 
 dependencies:
+  analyzer: ^6.4.1
+  collection: ^1.18.0
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
+  flutter_fancy_tree_view: ^1.6.0
+  flutter_riverpod: ^2.5.1
+  meta: ^1.12.0
   re_editor: ^0.3.0
   re_highlight: ^0.0.3
+  riverpod_annotation: ^2.3.5
 
 dev_dependencies:
+  build_runner: ^2.4.10
   choco_lints:
     git:
       ref: 1.1.0
       url: git@github.com:charlescyt/choco_lints.git
+  custom_lint: ^0.6.4
   flutter_test:
     sdk: flutter
+  riverpod_generator: ^2.4.0
+  riverpod_lint: ^2.3.10
 
 flutter:
   uses-material-design: true
