--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dart_ast_node_viewer
-description: "A new Flutter project."
+description: "A simple Dart AST node viewer."
 publish_to: "none"
-version: 0.1.0
+version: 0.1.0+1
 
 environment:
   sdk: ">=3.4.1 <4.0.0"
