--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,31 +4,31 @@ publish_to: "none"
 version: 0.1.0+1
 
 environment:
-  sdk: ">=3.4.1 <4.0.0"
+  sdk: ">=3.6.0 <4.0.0"
 
 dependencies:
-  analyzer: ^6.4.1
-  collection: ^1.18.0
+  analyzer: ^7.3.0
+  collection: ^1.19.0
   flutter:
     sdk: flutter
   flutter_fancy_tree_view: ^1.6.0
-  flutter_riverpod: ^2.5.1
-  meta: ^1.12.0
-  re_editor: ^0.3.0
+  flutter_riverpod: ^2.6.1
+  meta: ^1.15.0
+  re_editor: ^0.7.0
   re_highlight: ^0.0.3
-  riverpod_annotation: ^2.3.5
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
-  build_runner: ^2.4.11
+  build_runner: ^2.4.15
   choco_lints:
     git:
-      ref: 1.2.0
+      ref: v1.4.0
       url: https://github.com/charlescyt/choco_lints.git
-  custom_lint: ^0.6.4
+  custom_lint: ^0.7.5
   flutter_test:
     sdk: flutter
-  riverpod_generator: ^2.4.0
-  riverpod_lint: ^2.3.10
+  riverpod_generator: ^2.6.5
+  riverpod_lint: ^2.6.5
 
 flutter:
   uses-material-design: true
