--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   analyzer: ^7.3.0
   collection: ^1.19.0
+  flex_color_scheme: ^8.1.1
   flutter:
     sdk: flutter
   flutter_fancy_tree_view: ^1.6.0
