--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   re_editor: ^0.7.0
   re_highlight: ^0.0.3
   riverpod_annotation: ^2.6.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   build_runner: ^2.4.15
