--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_fancy_tree_view: ^1.6.0
   flutter_riverpod: ^2.6.1
+  font_awesome_flutter: ^10.8.0
   meta: ^1.15.0
   re_editor: ^0.7.0
   re_highlight: ^0.0.3
