--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   re_editor: ^0.7.0
   re_highlight: ^0.0.3
   riverpod_annotation: ^2.6.1
+  shared_preferences: ^2.5.3
   url_launcher: ^6.3.1
 
 dev_dependencies:
