--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   font_awesome_flutter: ^10.8.0
   meta: ^1.15.0
+  package_info_plus: ^8.3.0
   re_editor: ^0.7.0
   re_highlight: ^0.0.3
   riverpod_annotation: ^2.6.1
