--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
   flutter_fancy_tree_view: ^1.6.0
   flutter_riverpod: ^2.6.1
-  font_awesome_flutter: ^10.8.0
+  lucide_icons_flutter: ^2.0.2
   meta: ^1.15.0
   package_info_plus: ^8.3.0
   re_editor: ^0.7.0
