--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   analyzer: ^7.3.0
   collection: ^1.19.0
+  # Temporary fix for https://github.com/flutter/flutter/issues/119074
+  cupertino_icons: ^1.0.8
   flex_color_scheme: ^8.2.0
   flutter:
     sdk: flutter
