--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,6 +4,10 @@ analyzer:
   plugins:
     - custom_lint
 
+formatter:
+  trailing_commas: preserve
+  page_width: 120
+
 linter:
   rules:
     prefer_int_literals: false
