--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ publish_to: "none"
 version: 0.2.0+1
 
 environment:
-  sdk: ">=3.8.0 <4.0.0"
+  sdk: ">=3.9.0 <4.0.0"
+  flutter: ">=3.35.1"
 
 dependencies:
   analyzer: ^7.6.0
@@ -29,7 +30,7 @@ dev_dependencies:
   build_runner: ^2.5.4
   choco_lints:
     git:
-      ref: v1.6.0
+      ref: v1.7.0
       url: https://github.com/charlescyt/choco_lints.git
   custom_lint: ^0.7.6
   flutter_test:
