--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,34 +9,34 @@ environment:
 
 dependencies:
   analyzer: ^7.6.0
-  collection: ^1.19.0
+  collection: ^1.19.1
   # Temporary fix for https://github.com/flutter/flutter/issues/119074
   cupertino_icons: ^1.0.8
   flex_color_scheme: ^8.3.0
   flutter:
     sdk: flutter
   flutter_fancy_tree_view: ^1.6.0
-  flutter_riverpod: ^2.6.1
+  flutter_riverpod: ^3.0.0-dev.17
   lucide_icons_flutter: ^3.1.0
-  meta: ^1.15.0
+  meta: ^1.16.0
   package_info_plus: ^8.3.1
   re_editor: ^0.7.0
   re_highlight: ^0.0.3
-  riverpod_annotation: ^2.6.1
+  riverpod_annotation: ^3.0.0-dev.17
   shared_preferences: ^2.5.3
   url_launcher: ^6.3.2
 
 dev_dependencies:
-  build_runner: ^2.5.4
+  build_runner: ^2.7.1
   choco_lints:
     git:
       ref: v1.7.0
       url: https://github.com/charlescyt/choco_lints.git
-  custom_lint: ^0.7.6
+  custom_lint: ^0.8.0
   flutter_test:
     sdk: flutter
-  riverpod_generator: ^2.6.5
-  riverpod_lint: ^2.6.5
+  riverpod_generator: ^3.0.0-dev.17
+  riverpod_lint: ^3.0.0-dev.17
 
 flutter:
   uses-material-design: true
