--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: dart_ast_node_viewer
 description: "A simple Dart AST node viewer."
 publish_to: "none"
-version: 0.2.0+1
+version: 0.3.0+1
 
 environment:
-  sdk: ">=3.9.0 <4.0.0"
-  flutter: ">=3.35.3"
+  sdk: ">=3.10.0 <4.0.0"
+  flutter: ">=3.38.1"
 
 dependencies:
-  analyzer: ^7.6.0
+  analyzer: ^8.0.0
   collection: ^1.19.1
   # Temporary fix for https://github.com/flutter/flutter/issues/119074
   cupertino_icons: ^1.0.8
@@ -17,9 +17,10 @@ dependencies:
     sdk: flutter
   flutter_fancy_tree_view: ^1.6.0
   flutter_riverpod: ^3.0.3
-  lucide_icons_flutter: ^3.1.5
+  lucide_icons_flutter: ^3.1.6
   meta: ^1.16.0
   package_info_plus: ^9.0.0
+  pub_semver: ^2.2.0
   re_editor: ^0.8.0
   re_highlight: ^0.0.3
   riverpod_annotation: ^3.0.3
@@ -27,12 +28,12 @@ dependencies:
   url_launcher: ^6.3.2
 
 dev_dependencies:
-  build_runner: ^2.7.1
+  build_runner: ^2.10.3
   choco_lints:
     git:
       ref: v1.7.0
       url: https://github.com/charlescyt/choco_lints.git
-  custom_lint: ^0.8.0
+  custom_lint: ^0.8.1
   flutter_test:
     sdk: flutter
   riverpod_generator: ^3.0.3
